fix(site-vanilla): color and alignement

--- a/site-vanilla/static/style/chronology.css
+++ b/site-vanilla/static/style/chronology.css
@@ -48,6 +48,7 @@
 
     p {
       margin: 1rem;
+      text-align: left;
     }
 
     details {
@@ -65,41 +66,41 @@
 .percentage-line {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 10px;
+  margin-bottom: 0.5rem;
   padding-left: 20%;
 }
 
 .percentage {
   text-align: center;
   width: 20%;
-  font-size: 14px;
+  font-size: 1rem;
   color: gray;
 }
 
 .row {
   display: flex;
   align-items: center;
-  margin-bottom: 10px;
+  margin-bottom: 1rem;
 }
 
 .label {
   width: 20%;
   text-align: right;
-  padding-right: 10px;
+  padding-right: 1rem;
 }
 
 .bar {
   width: 80%;
-  background-color: #f1f1f1;
-  height: 30px;
+  background-color: #ffffff;
+  height: 2rem;
   position: relative;
-  border-radius: 5px;
+  border-radius: 0.5rem;
   overflow: hidden;
 }
 
 .progress {
   height: 100%;
-  line-height: 30px;
+  line-height: 2rem;
   color: white;
   text-align: center;
   white-space: nowrap;
